25-downloads/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: downloads
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: http
              containerPort: 8080
            - name: bt-tcp
              containerPort: 6881
              protocol: TCP
            - name: bt-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /tank/app/qbittorrent
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: DirectoryOrCreate
