25-downloads/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: downloads
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 80
      targetPort: 8080
